# AutoMower-BLE

./: .gitignore  setup.cfg
.flashpost/Flashpost-tests/: flashpost.db  flashpostCollections.db  flashpostCookies.db  flashpostHistory.db  flashpostVariable.db
app/: main.py  my_automower_ble
app/com/github/hbldh/bleak/: PythonBluetoothGattCallback.java  PythonScanCallback.java
automower_ble/: mower.py  protocol.py
huski/backend/: .gitignore  publish.sh  pubspec.yaml
huski/backend/lib/: main.dart
huski/backend/lib/config/: arguments.dart  config.dart
huski/backend/lib/repository/: redis_repository.dart  state_repository.dart
huski/backend/lib/router/: cors.dart  router.dart
huski/backend/lib/service/: command_service.dart  ping_service.dart  state_service.dart
huski/backend/lib/utils/: json_utils.dart  logger_utils.dart  notify_utils.dart  redis_utils.dart  render_utils.dart  time_utils.dart
huski/common/: pubspec.yaml
huski/common/lib/: huski_common.dart
huski/common/lib/src/: model.dart
huski/findmyhuski/: Dockerfile  build_apk.sh  buildozer.spec  main.py  my_automower_ble
huski/my_huski/: README.md  pubspec.yaml
huski/my_huski/android/app/: build.gradle
huski/my_huski/ios/Runner/: Info.plist
huski/my_huski/ios/Runner.xcodeproj/: project.pbxproj
huski/my_huski/lib/: main.dart
huski/my_huski/lib/api/: api.dart
huski/my_huski/lib/ui/: command_page.dart  status_page.dart
huski/restart_huski/: README.md  pubspec.yaml
huski/restart_huski/android/app/: build.gradle
huski/restart_huski/lib/: main.dart
(+4 files in other folders)
