[metadata]
name = automower_ble
version = 0.2.0
description = An unofficial reverse engineered Husqvarna Automower Connect BLE library
author = Alistair Francis
author_email = alistair@alistair23.me
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
classifiers =
    Environment :: Console
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
python_requires = >=3.10

[options]
packages = find:
include_package_data = true

[options.package_data]
automower_ble = *.json
